[tool.poetry]
name = "repl_pygame_Raycaster"
version = "0.1.0"
description = "A simple racaster game! Enjoy!"
authors = ["Preston So"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
